--- a/src/app/pages/admin/about/about.component.scss
+++ b/src/app/pages/admin/about/about.component.scss
@@ -1,1 +1,10 @@
 @import '../../../shared/styles/admin-common.scss';
+
+.button-row {
+  display: flex;
+  gap: 1rem;
+  
+  basic-button {
+    flex: 1;
+  }
+}
