--- a/src/app/components/basic-components/modal/modal.component.scss
+++ b/src/app/components/basic-components/modal/modal.component.scss
@@ -45,10 +45,41 @@
   color: $black;
   overflow: hidden;
 
-  img {
+  .close-icon {
     position: absolute;
-    left: 0;
+    left: 15px;
+    width: 24px;
+    height: 24px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 0.2s ease;
+
+    &:hover {
+      opacity: 0.7;
+    }
+
+    .close-line {
+      position: absolute;
+      width: 18px;
+      height: 2px;
+      background-color: $black;
+      border-radius: 1px;
+      transition: background-color 0.2s ease;
+
+      &.close-line-1 {
+        transform: rotate(45deg);
+      }
+
+      &.close-line-2 {
+        transform: rotate(-45deg);
+      }
+    }
+
+    &:hover .close-line {
+      background-color: rgba($black, 0.7);
+    }
   }
 
   h3 {
